src/Screens/ReferenceList/index.module.scss
/* ... */
.contractedServiceHeader {
  background: #afa9ef 0% 0% no-repeat padding-box;
  font-weight: medium;
  height: 55px;
  width: 65vw;
  border-radius: 6px;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 3% 47% 20% 20% 10%;
}

.terminationHeader {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 45px;
  width: 100%;
  border-radius: 6px;
  margin-top: 5px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 5% 75% 10% 5%;
}

.terminationHeader2 {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 45px;
  width: 98%;
  border-radius: 6px;
  margin-top: 1.5px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 3% 88% 5% 5%;
}

.healthCareTableData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 61% 8% 18% 6% 5%;
}

.departmentTableData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 96%;
  margin-left: 2%;
  border: 0.20000000298023224px solid #d7d4f7;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 4px;
  // grid-template-columns: 3% 58% 15% 15% 5% 5%;
  grid-template-columns: 7% 56% 5% 20% 6% 6%;
}

.terminationLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 58% 15% 15% 5% 5%;
}

.absenseLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 40% 35% 10% 8%;
}

.absenseLayer4Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 42% 35% 10% 5%;
  border: 0.400000006px solid rgba(136, 126, 231, 0.6862745098);
}

.contractedServiceProviderCard {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  margin-top: 5px;
}

.contractedServiceProviderCard1 {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 93%;
  margin-left: 7%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  margin-top: 5px;
}

.contractedServiceProviderCard2 {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 93%;
  margin-left: 7%;
  border-radius: 6px;
  display: grid;
  grid-template-columns: 5% 75% 10% 10%;
  align-items: center;
  margin-top: 5px;
}

.contractedServiceProviderCard3 {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  grid-template-columns: 5% 75% 10% 10%;
  align-items: center;
  margin-top: 5px;
}

.proofLayer3Card {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 100%;
  border-radius: 10px;
  border: 1px solid #d3d0f6;
  display: grid;
  margin-top: 5px;
  align-items: center;
  grid-template-columns: 1% 40% 45% 5% 5% 5%;
}

.contractedServiceLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 50% 20% 20% 5% 5%;
}

.DocumentUploadLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 96%;
  margin-left: 2%;
  margin-right: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 60% 15% 15% 5% 5%;
}

.contractdocumentLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 96%;
  margin-left: 2%;
  margin-right: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 50% 20% 20% 5% 5%;
}

.tableHeaderDocumentUpload {
  background: #afa9ef 0% 0% no-repeat padding-box;
  font-weight: medium;
  //margin-left: 50px;
  height: 55px;
  width: 100%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 56% 15% 15% 10% 10%;
}

.width75Percent {
  width: 75%;
}

.departmentTableInnerFolderData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 93%;
  margin-left: 5%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 4% 55% 8% 20% 6% 6%;;
}

.terminationInnerFolderData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 95%;
  margin-left: 5%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 2% 58% 15% 16% 5% 5%;
}

.healthCareTableDataColor1 {
  background-color: #ebe9fb;
}

.healthCareTableDataColor2 {
  background-color: #f5f5f8;
}

.healthCareTableDataColor3 {
  background-color: #d3d0f6;
}

.tableDataFontStyle {
  font: normal normal normal 15px/17px Montserrat;
  letter-spacing: 0px;
  color: #484c51;
  opacity: 1;
  margin-left: 15px;
  text-align: left;
  margin-top: 10px;
}

.tableDataFontStyle1 {
  font: normal normal normal 15px/17px Montserrat;
  letter-spacing: 0px;
  color: #484c51;
  opacity: 1;
  margin-top: 10px;
  text-align: left;
  margin-left: 10px;
}

.tableDataFontStyle2 {
  font: normal normal normal 13px/16px Montserrat;
  letter-spacing: 0px;
  color: #1c2127;
  opacity: 1;
  text-align: left;
  margin-left: 10px;
  display: flex;
}
/* ... */

